--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -5,7 +5,7 @@ sklearn:
       pip install git+https://github.com/scikit-learn/scikit-learn.git
 
   models:
-    minimum: "0.24.1"
+    minimum: "1.4.2"
     maximum: "1.6.1"
     requirements:
       "< 1.3.0": ["numpy<2"]
@@ -16,7 +16,7 @@ sklearn:
       pytest tests/sklearn/test_sklearn_model_export.py
 
   autologging:
-    minimum: "0.24.1"
+    minimum: "1.4.2"
     maximum: "1.6.1"
     requirements:
       ">= 0.0.0": ["matplotlib"]
@@ -39,7 +39,7 @@ pytorch:
       pip install --upgrade --pre torch -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
 
   models:
-    minimum: "1.9.0"
+    minimum: "2.2.1"
     maximum: "2.6.0"
     requirements:
       ">= 0.0.0": ["torchvision", "scikit-learn"]
@@ -49,7 +49,7 @@ pytorch:
       pytest tests/pytorch/test_pytorch_model_export.py tests/pytorch/test_pytorch_metric_value_conversion_utils.py
 
   autologging:
-    minimum: "1.9.0"
+    minimum: "2.2.1"
     maximum: "2.6.0"
     requirements:
       ">= 0.0.0": ["tensorboard"]
@@ -68,7 +68,7 @@ pytorch-lightning:
       pip install git+https://github.com/PytorchLightning/pytorch-lightning.git
 
   autologging:
-    minimum: "1.9.0"
+    minimum: "2.1.4"
     maximum: "2.5.1"
     requirements:
       ">= 0.0.0": ["scikit-learn", "torchvision", "protobuf<4.0.0", "tensorboard", "greenlet<3"]
@@ -82,7 +82,7 @@ keras:
       pip install --upgrade git+https://github.com/keras-team/keras.git
 
   models:
-    minimum: "3.0.2"
+    minimum: "3.0.5"
     maximum: "3.9.2"
     requirements:
       ">= 3.0.0": ["jax[cpu]>0.4"]
@@ -91,7 +91,7 @@ keras:
       pytest tests/keras/test_callback.py
 
   autologging:
-    minimum: "3.0.2"
+    minimum: "3.0.5"
     maximum: "3.9.2"
     requirements:
       ">= 3.0.0": ["jax[cpu]>0.4"]
@@ -106,7 +106,7 @@ tensorflow:
       pip install --pre tf-nightly
 
   models:
-    minimum: "2.7.4"
+    minimum: "2.15.1"
     maximum: "2.19.0"
     requirements:
       # Requirements to run tests for keras
@@ -125,7 +125,7 @@ tensorflow:
         tests/tensorflow/test_keras_pyfunc_model_works_with_all_input_types.py
 
   autologging:
-    minimum: "2.7.4"
+    minimum: "2.15.1"
     maximum: "2.19.0"
     requirements:
       "== dev": ["scikit-learn"]
@@ -144,7 +144,7 @@ xgboost:
       pip install git+https://github.com/dmlc/xgboost.git#subdirectory=python-package
 
   models:
-    minimum: "1.4.2"
+    minimum: "2.1.0"
     maximum: "3.0.0"
     requirements:
       ">= 0.0.0": ["scikit-learn"]
@@ -155,7 +155,7 @@ xgboost:
       pytest tests/xgboost/test_xgboost_model_export.py
 
   autologging:
-    minimum: "1.4.2"
+    minimum: "2.1.0"
     maximum: "3.0.0"
     requirements:
       ">= 0.0.0": ["scikit-learn", "matplotlib"]
@@ -174,7 +174,7 @@ lightgbm:
       bash build-python.sh install
 
   models:
-    minimum: "3.3.5"
+    minimum: "4.4.0"
     maximum: "4.6.0"
     requirements:
       ">= 0.0.0": ["scikit-learn"]
@@ -183,7 +183,7 @@ lightgbm:
       pytest tests/lightgbm/test_lightgbm_model_export.py
 
   autologging:
-    minimum: "3.3.5"
+    minimum: "4.4.0"
     maximum: "4.6.0"
     requirements:
       ">= 0.0.0": ["scikit-learn", "matplotlib"]
@@ -196,7 +196,7 @@ catboost:
     pip_release: "catboost"
 
   models:
-    minimum: "1.0.0"
+    minimum: "1.2.3"
     maximum: "1.2.8"
     requirements:
       ">= 0.0.0": ["scikit-learn"]
@@ -228,7 +228,7 @@ onnx:
       pip install dist/*manylinux2014_x86_64.whl
 
   models:
-    minimum: "1.13.1"
+    minimum: "1.16.0"
     maximum: "1.17.0"
     requirements:
       ">= 0.0.0": ["onnxruntime", "torch", "scikit-learn", "protobuf<4.0.0"]
@@ -242,7 +242,7 @@ spacy:
       pip install git+https://github.com/explosion/spaCy.git
 
   models:
-    minimum: "3.4.4"
+    minimum: "3.7.4"
     maximum: "3.8.5"
     python:
       ">= 3.8.4": "3.10"
@@ -258,7 +258,7 @@ statsmodels:
       pip install git+https://github.com/statsmodels/statsmodels.git
 
   models:
-    minimum: "0.12.2"
+    minimum: "0.14.2"
     maximum: "0.14.4"
     requirements:
       "< 0.13.0": ["pandas==1.3.5", "scipy==1.7.3"]
@@ -267,7 +267,7 @@ statsmodels:
       pytest tests/statsmodels/test_statsmodels_model_export.py
 
   autologging:
-    minimum: "0.12.2"
+    minimum: "0.14.2"
     maximum: "0.14.4"
     requirements:
       "< 0.13.0": ["pandas==1.3.5", "scipy==1.7.3"]
@@ -290,7 +290,7 @@ spark:
       pyspark --version
 
   models:
-    minimum: "3.1.2"
+    minimum: "3.5.1"
     maximum: "3.5.5"
     java:
       "> 3.4.1": "17"
@@ -319,7 +319,7 @@ spark:
       fi
 
   autologging:
-    minimum: "3.1.2"
+    minimum: "3.5.1"
     maximum: "3.5.5"
     runs_on:
       # TODO: Remove this once ubuntu 24 is fully rolled out: https://github.com/actions/runner-images/issues/10636
@@ -359,7 +359,7 @@ prophet:
     pip_release: "prophet"
 
   models:
-    minimum: "1.1.1"
+    minimum: "1.1.6"
     maximum: "1.1.6"
     requirements:
       # Prophet does not handle numpy 2 yet. https://github.com/facebook/prophet/issues/2595
@@ -380,7 +380,7 @@ pmdarima:
     #   # pip install git+https://github.com/alkaline-ml/pmdarima.git
 
   models:
-    minimum: "1.8.1"
+    minimum: "None"
     maximum: "2.0.4"
     requirements:
       "< 1.9": ["scikit-learn<1.3"]
@@ -402,7 +402,7 @@ diviner:
       pip install git+https://github.com/databricks/diviner.git
 
   models:
-    minimum: "0.1.0"
+    minimum: "None"
     maximum: "0.1.1"
     requirements:
       # https://github.com/alan-turing-institute/sktime/issues/2898
@@ -426,7 +426,7 @@ h2o:
   package_info:
     pip_release: "h2o"
   models:
-    minimum: "3.40.0.1"
+    minimum: "3.46.0.1"
     maximum: "3.46.0.6"
     run: |
       pytest tests/h2o
@@ -435,7 +435,7 @@ shap:
   package_info:
     pip_release: "shap"
   models:
-    minimum: "0.42.1"
+    minimum: "0.45.0"
     maximum: "0.47.2"
     requirements:
       "< 0.46.0": ["numpy<1.24.0"]
@@ -446,14 +446,14 @@ paddle:
   package_info:
     pip_release: "paddlepaddle"
   models:
-    minimum: "2.5.2"
+    minimum: "2.6.1"
     maximum: "3.0.0"
     requirements:
       "< 2.6.0": ["numpy<2"]
     run: |
       pytest tests/paddle/test_paddle_model_export.py
   autologging:
-    minimum: "2.5.2"
+    minimum: "2.6.1"
     maximum: "3.0.0"
     requirements:
       "< 2.6.0": ["numpy<2"]
@@ -466,7 +466,7 @@ transformers:
     install_dev: |
       pip install git+https://github.com/huggingface/transformers
   models:
-    minimum: "4.35.2"
+    minimum: "4.38.0"
     maximum: "4.51.3"
     test_every_n_versions: 4
     unsupported: [
@@ -507,7 +507,7 @@ transformers:
       pip uninstall -y accelerate
       pytest tests/transformers/test_transformers_model_export.py -k "test_transformers_tf_model_save_without_conda_env_uses_default_env_with_expected_dependencies or test_transformers_pt_model_save_dependencies_without_accelerate"
   autologging:
-    minimum: "4.35.2"
+    minimum: "4.38.0"
     maximum: "4.51.3"
     test_every_n_versions: 4
     unsupported: [
@@ -545,7 +545,7 @@ openai:
     install_dev: |
       pip install git+https://github.com/openai/openai-python
   models:
-    minimum: "1.0.1"
+    minimum: "1.11.0"
     maximum: "1.75.0"
     requirements:
       ">= 0.0.0": [
@@ -564,7 +564,7 @@ openai:
     # many test tasks for openai. Reducing the number of testing only for every 10 version.
     test_every_n_versions: 10
   autologging:
-    minimum: "1.17.0"
+    minimum: "1.11.0"
     maximum: "1.75.0"
     python:
       # OpenAI Swarm requires Python >=3.10
@@ -591,14 +591,14 @@ dspy:
     install_dev: |
       pip install git+https://github.com/stanfordnlp/dspy.git
   models:
-    minimum: "2.5.17"
+    minimum: "0.0.1"
     maximum: "2.6.18"
     requirements:
       ">= 0.0.0": ["openai"]
     run: |
       pytest tests/dspy --ignore tests/dspy/test_dspy_autolog.py
   autologging:
-    minimum: "2.5.17"
+    minimum: "0.0.1"
     maximum: "2.6.18"
     requirements:
       ">= 0.0.0": ["openai"]
@@ -612,7 +612,7 @@ langchain:
       pip install git+https://github.com/langchain-ai/langchain#subdirectory=libs/langchain
   models:
     # Where the large package update was made (langchain-core, community, ...)
-    minimum: "0.0.354"
+    minimum: "0.1.5"
     maximum: "0.3.24"
     requirements:
       ">= 0.0.0": [
@@ -660,7 +660,7 @@ langchain:
         pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py --ignore tests/langchain/test_langchain_evaluation.py
       fi
   autologging:
-    minimum: "0.1.0"
+    minimum: "0.1.5"
     maximum: "0.3.24"
     requirements:
       ">= 0.0.0": [
@@ -709,7 +709,7 @@ langgraph:
       pip install git+https://github.com/langchain-ai/langgraph#subdirectory=libs/langgraph
 
   models:
-    minimum: "0.2.0"
+    minimum: "0.0.22"
     maximum: "0.3.31"
     requirements:
       ">= 0.0.0": [
@@ -724,7 +724,7 @@ langgraph:
       pytest tests/langgraph --ignore tests/langgraph/test_langgraph_autolog.py
 
   autologging:
-    minimum: "0.2.0"
+    minimum: "0.0.22"
     maximum: "0.3.31"
     requirements:
       ">= 0.0.0": [
@@ -746,7 +746,7 @@ llama_index:
       pip install git+https://github.com/run-llama/llama_index.git
   models:
     # New event/span framework is fully implemented in 0.10.44
-    minimum: "0.10.44"
+    minimum: "0.9.41"
     maximum: "0.12.32"
     requirements:
       ">= 0.0.0": [
@@ -762,7 +762,7 @@ llama_index:
         ]
     run: pytest tests/llama_index --ignore tests/llama_index/test_llama_index_autolog.py --ignore tests/llama_index/test_llama_index_tracer.py
   autologging:
-    minimum: "0.10.44"
+    minimum: "0.9.41"
     maximum: "0.12.32"
     requirements:
       ">= 0.0.0": [
@@ -781,7 +781,7 @@ autogen:
     # install_dev: |
     #  pip install git+https://github.com/microsoft/autogen#subdirectory=python/packages/autogen-agentchat
   autologging:
-    minimum: "0.2.36"
+    minimum: "0.0.2"
     maximum: "0.5.4"
     unsupported: [">=0.4"]
     python:
@@ -801,7 +801,7 @@ gemini:
     install_dev: |
       pip install git+https://github.com/googleapis/python-genai
   autologging:
-    minimum: "1.0.0"
+    minimum: "0.0.1"
     maximum: "1.11.0"
     requirements:
     run: |
@@ -815,7 +815,7 @@ anthropic:
     install_dev: |
       pip install git+https://github.com/anthropics/anthropic-sdk-python
   autologging:
-    minimum: "0.30.0"
+    minimum: "0.14.1"
     maximum: "0.50.0"
     requirements:
       "< 0.40.0": ["httpx<0.28.0"]
@@ -831,7 +831,7 @@ crewai:
     install_dev: |
       pip install git+https://github.com/crewAIInc/crewAI
   autologging:
-    minimum: "0.80.0"
+    minimum: "0.5.0"
     maximum: "0.114.0"
     unsupported: ["==0.114.0"]
     python:
@@ -861,7 +861,7 @@ pydantic_ai:
   autologging:
     python:
       ">= 0.1.0": "3.10"
-    minimum: "0.1.9"
+    minimum: "0.0.0"
     maximum: "0.1.9"
     requirements:
       ">= 0.0.0": ["mcp"]
@@ -874,7 +874,7 @@ smolagents:
     install_dev: |
       pip install "git+https://github.com/huggingface/smolagents"
   autologging:
-    minimum: "1.14.0"
+    minimum: "0.1.0"
     maximum: "1.14.0"
     python:
       ">=1.14.0": "3.10"
@@ -893,7 +893,7 @@ mistral:
       pip install .
       rm -rf $TMP_DIR
   autologging:
-    minimum: "1.0.0"
+    minimum: "0.1.2"
     maximum: "1.7.0"
     requirements:
     run: pytest tests/mistral
@@ -904,7 +904,7 @@ sentence_transformers:
     install_dev: |
       pip install git+https://github.com/UKPLab/sentence-transformers#egg=sentence-transformers
   models:
-    minimum: "2.2.2"
+    minimum: "2.4.0"
     maximum: "4.1.0"
     requirements:
       ">= 0.0.0": [
@@ -927,7 +927,7 @@ johnsnowlabs:
   package_info:
     pip_release: "johnsnowlabs"
   models:
-    minimum: "4.4.6"
+    minimum: "5.2.4"
     maximum: "5.5.5"
     requirements:
       ">= 0.0.0": ["pandas<=1.5.3"]
@@ -946,7 +946,7 @@ promptflow:
     install_dev: |
       pip install git+https://github.com/microsoft/promptflow#subdirectory=src/promptflow
   models:
-    minimum: "1.3.0"
+    minimum: "1.5.0"
     maximum: "1.17.2"
     requirements:
       # Requirements to run sparkudf predict test
@@ -964,7 +964,7 @@ litellm:
     install_dev: |
       pip install git+https://github.com/BerriAI/litellm.git
   autologging:
-    minimum: "1.52.9"
+    minimum: "1.20.8"
     maximum: "1.67.1"
     # TODO: Remove this once https://github.com/BerriAI/litellm/issues/9656 is fixed
     unsupported: [">=1.59"]
@@ -983,7 +983,7 @@ groq:
     install_dev: |
       pip install git+https://github.com/groq/groq-python
   autologging:
-    minimum: "0.13.0"
+    minimum: "0.3.0"
     maximum: "0.23.0"
     requirements:
     run: pytest tests/groq
@@ -994,6 +994,6 @@ bedrock:
     module_name: "boto3"
   autologging:
     # BedrockRuntime client is added in boto3 1.33
-    minimum: "1.33.0"
+    minimum: "1.34.33"
     maximum: "1.38.0"
     run: pytest tests/bedrock
