--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -5,7 +5,7 @@ sklearn:
       pip install git+https://github.com/scikit-learn/scikit-learn.git
 
   models:
-    minimum: "1.4.0"
+    minimum: "1.3.0"
     maximum: "1.6.1"
     python:
       "== dev": "3.10"
@@ -13,7 +13,7 @@ sklearn:
       pytest tests/sklearn/test_sklearn_model_export.py
 
   autologging:
-    minimum: "1.4.0"
+    minimum: "1.3.0"
     maximum: "1.6.1"
     requirements:
       ">= 0.0.0": ["matplotlib"]
@@ -34,7 +34,7 @@ pytorch:
       pip install --upgrade --pre torch -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
 
   models:
-    minimum: "2.1.1"
+    minimum: "2.1.0"
     maximum: "2.6.0"
     requirements:
       ">= 0.0.0": ["torchvision", "scikit-learn"]
@@ -44,12 +44,10 @@ pytorch:
       pytest tests/pytorch/test_pytorch_model_export.py tests/pytorch/test_pytorch_metric_value_conversion_utils.py
 
   autologging:
-    minimum: "2.1.1"
+    minimum: "2.1.0"
     maximum: "2.6.0"
     requirements:
       ">= 0.0.0": ["tensorboard"]
-      # Old pytorch uses setuptools.distutils.version, which is not available in setuptools>59.5
-      # https://github.com/pytorch/pytorch/blob/v1.10.2/torch/utils/tensorboard/__init__.py#L4
     run: |
       pytest tests/pytorch/test_tensorboard_autolog.py
 
@@ -62,7 +60,7 @@ pytorch-lightning:
       pip install git+https://github.com/PytorchLightning/pytorch-lightning.git
 
   autologging:
-    minimum: "2.1.2"
+    minimum: "2.0.3"
     maximum: "2.5.1"
     requirements:
       ">= 0.0.0": ["scikit-learn", "torchvision", "protobuf<4.0.0", "tensorboard", "greenlet<3"]
@@ -100,11 +98,15 @@ tensorflow:
       pip install --pre tf-nightly
 
   models:
-    minimum: "2.14.1"
+    minimum: "2.12.1"
     maximum: "2.19.0"
     requirements:
       # Requirements to run tests for keras
       ">= 0.0.0": ["scikit-learn", "pyspark", "pyarrow", "transformers!=4.38.0,!=4.38.1"]
+      # TensorFlow 2.12.1 and 2.13.1 requires typing_extensions < 4.6.0, which is
+      # incompatible with SQLAlchemy 2.0.25 and Pydantic v2 with error
+      # `cannot import name 'TypeAliasType' from 'typing_extensions'`
+      ">= 2.12.1, <= 2.13.1": ["sqlalchemy<2.0.25", "pydantic<2"]
       "== 2.15.1": ["transformers<4.39.0"]
     run: |
       pytest \
@@ -114,10 +116,14 @@ tensorflow:
         tests/tensorflow/test_keras_pyfunc_model_works_with_all_input_types.py
 
   autologging:
-    minimum: "2.14.1"
+    minimum: "2.12.1"
     maximum: "2.19.0"
     requirements:
       "== dev": ["scikit-learn"]
+      # TensorFlow 2.12.1 and 2.13.1 requires typing_extensions < 4.6.0, which is
+      # incompatible with SQLAlchemy 2.0.25 with error
+      # `cannot import name 'TypeAliasType' from 'typing_extensions'`
+      ">= 2.12.1, <= 2.13.1": ["sqlalchemy<2.0.25", "pydantic<2"]
     run: |
       pytest tests/tensorflow/test_tensorflow2_autolog.py
 
@@ -128,7 +134,7 @@ xgboost:
       pip install git+https://github.com/dmlc/xgboost.git#subdirectory=python-package
 
   models:
-    minimum: "2.0.2"
+    minimum: "1.7.6"
     maximum: "3.0.0"
     requirements:
       ">= 0.0.0": ["scikit-learn"]
@@ -138,7 +144,7 @@ xgboost:
       pytest tests/xgboost/test_xgboost_model_export.py
 
   autologging:
-    minimum: "2.0.2"
+    minimum: "1.7.6"
     maximum: "3.0.0"
     requirements:
       ">= 0.0.0": ["scikit-learn", "matplotlib"]
@@ -156,18 +162,20 @@ lightgbm:
       bash build-python.sh install
 
   models:
-    minimum: "4.2.0"
+    minimum: "4.0.0"
     maximum: "4.6.0"
     requirements:
       ">= 0.0.0": ["scikit-learn"]
+      "== 4.0.*": ["numpy<2"]
     run: |
       pytest tests/lightgbm/test_lightgbm_model_export.py
 
   autologging:
-    minimum: "4.2.0"
+    minimum: "4.0.0"
     maximum: "4.6.0"
     requirements:
       ">= 0.0.0": ["scikit-learn", "matplotlib"]
+      "== 4.0.*": ["numpy<2"]
     run: |
       pytest tests/lightgbm/test_lightgbm_autolog.py
 
@@ -176,7 +184,7 @@ catboost:
     pip_release: "catboost"
 
   models:
-    minimum: "1.2.3"
+    minimum: "1.2.1"
     maximum: "1.2.8"
     requirements:
       ">= 0.0.0": ["scikit-learn"]
@@ -206,7 +214,7 @@ onnx:
       pip install dist/*manylinux2014_x86_64.whl
 
   models:
-    minimum: "1.16.0"
+    minimum: "1.14.1"
     maximum: "1.17.0"
     requirements:
       ">= 0.0.0": ["onnxruntime", "torch", "scikit-learn", "protobuf<4.0.0"]
@@ -220,7 +228,7 @@ spacy:
       pip install git+https://github.com/explosion/spaCy.git
 
   models:
-    minimum: "3.7.4"
+    minimum: "3.5.3"
     maximum: "3.8.5"
     python:
       ">= 3.8.4": "3.10"
@@ -262,7 +270,7 @@ spark:
       pyspark --version
 
   models:
-    minimum: "3.4.2"
+    minimum: "3.4.1"
     maximum: "3.5.5"
     java:
       "> 3.4.1": "17"
@@ -290,11 +298,8 @@ spark:
       fi
 
   autologging:
-    minimum: "3.4.2"
+    minimum: "3.4.1"
     maximum: "3.5.5"
-    runs_on:
-      # TODO: Remove this once ubuntu 24 is fully rolled out: https://github.com/actions/runner-images/issues/10636
-      "== 3.3.4": "ubuntu-24.04"
     java:
       ">= 3.4.1": "17"
     # NB: Allow unreleased maximum versions for the pyspark package to support models and
@@ -329,7 +334,7 @@ prophet:
     pip_release: "prophet"
 
   models:
-    minimum: "1.1.6"
+    minimum: "1.1.3"
     maximum: "1.1.6"
     requirements:
       # Prophet does not handle numpy 2 yet. https://github.com/facebook/prophet/issues/2595
@@ -350,7 +355,7 @@ pmdarima:
     #   # pip install git+https://github.com/alkaline-ml/pmdarima.git
 
   models:
-    minimum: "1.8.1"
+    minimum: "2.0.4"
     maximum: "2.0.4"
     requirements:
       "< 1.9": ["scikit-learn<1.3"]
@@ -396,7 +401,7 @@ h2o:
   package_info:
     pip_release: "h2o"
   models:
-    minimum: "3.44.0.3"
+    minimum: "3.42.0.1"
     maximum: "3.46.0.6"
     run: |
       pytest tests/h2o
@@ -405,7 +410,7 @@ shap:
   package_info:
     pip_release: "shap"
   models:
-    minimum: "0.44.0"
+    minimum: "0.42.1"
     maximum: "0.47.2"
     requirements:
       "< 0.46.0": ["numpy<1.24.0"]
@@ -416,13 +421,17 @@ paddle:
   package_info:
     pip_release: "paddlepaddle"
   models:
-    minimum: "2.6.0"
+    minimum: "2.5.2"
     maximum: "3.0.0"
+    requirements:
+      "< 2.6.0": ["numpy<2"]
     run: |
       pytest tests/paddle/test_paddle_model_export.py
   autologging:
-    minimum: "2.6.0"
+    minimum: "2.5.2"
     maximum: "3.0.0"
+    requirements:
+      "< 2.6.0": ["numpy<2"]
     run: |
       pytest tests/paddle/test_paddle_autolog.py
 
@@ -511,7 +520,7 @@ openai:
     install_dev: |
       pip install git+https://github.com/openai/openai-python
   models:
-    minimum: "1.2.4"
+    minimum: "1.0.1"
     maximum: "1.75.0"
     requirements:
       ">= 0.0.0": [
@@ -892,7 +901,7 @@ johnsnowlabs:
   package_info:
     pip_release: "johnsnowlabs"
   models:
-    minimum: "5.1.8"
+    minimum: "4.4.6"
     maximum: "5.5.5"
     requirements:
       ">= 0.0.0": ["pandas<=1.5.3"]
