--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -879,6 +879,7 @@ smolagents:
     python:
       ">=1.14.0": "3.10"
     requirements:
+      ">= 0.0.0": ["duckduckgo-search"]
     run: pytest tests/smolagents
 
 mistral:
