--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -331,10 +331,11 @@ jobs:
       - name: Install dependencies
         run: |
           source ./dev/install-common-deps.sh
-      - name: Run GenAI Tests
-        run: |
           # GenAI evaluation tests require databricks-agents that only work with Python 3.10~
           pip install databricks-agents openai
+      - uses: ./.github/actions/show-versions
+      - name: Run GenAI Tests
+        run: |
           pytest tests/genai
 
   optuna:
