--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -70,6 +70,10 @@ jobs:
       - name: Run prettier
         run: |
           yarn prettier:check
+      # TODO: Disabled for now. Revisit after DAIS.
+      # - name: Run knip
+      #   run: |
+      #     yarn knip
       - name: Run extract-i18n lint
         run: |
           yarn i18n:check
