--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -338,7 +338,7 @@ jobs:
       - uses: ./.github/actions/show-versions
       - name: Run GenAI Tests
         run: |
-          pytest tests/genai
+          pytest tests/genai -s
 
   optuna:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
